# hyoga

./: .gitignore  .pylintrc  .readthedocs.yaml  .zenodo.json  CITATION.cff  README.rst  setup.cfg  setup.py
.github/workflows/: ci.yaml  pypi.yaml  tests.yaml
cartowik/: __init__.py  annotations.py  conventions.py  decorations.py  naturalearth.py  profiletools.py  shadedrelief.py
doc/: Makefile  api.rst  conf.py  environment.yml  index.rst  masking.rst  opening.rst  plotting.rst  reference.rst  requirements.txt  roadmap.rst  whatsnew.rst
doc/_static/css/: custom.css
doc/api/: config.rst  datasets.rst  index.rst  open.rst  plot.rst
doc/datasets/: altitude.rst  index.rst  masking.rst  opening.rst  plotting.rst  refining.rst  shading.rst  vectors.rst
doc/foreword/: history.rst  install.rst  startup.rst
doc/plotting/: altitude.rst  datasets.rst
examples/: .pylintrc  README.rst  download_external.sh  hokkaido_location.py  hokkaido_minimalist.py  hokkaido_topographic.py  hokkaido_topographic_contours.py  plot_bedrock_erosion.py  plot_bedrock_isostasy.py  plot_interpolated.py  plot_surface_contours.py  plot_surface_streamplot.py  plot_surface_velocity.py  plot_with_xarray.py
examples/cartography/: README.rst  plot_bedrock_contours.py  plot_colormap_reference.py  plot_hillshade_colormaps.py  plot_hillshade_directions.py  plot_naturalearth_geopandas.py  plot_naturalearth_subjects.py
examples/datasets/: README.rst  plot_bedrock_altitude.py  plot_bedrock_erosion.py  plot_bedrock_isostasy.py  plot_ice_margin.py  plot_surface_contours.py  plot_surface_streamplot.py  plot_surface_velocity.py
examples/interp/: README.rst  plot_interpolated.py  plot_interpolated_output.py  plot_interpolated_resolutions.py  plot_interpolated_streamplot.py  plot_interpolated_surface.py  plot_profile_altitudes.py
examples/logos/: README.rst  plot_hyoga_logo.py
examples/shading/: README.rst  plot_bedrock_altitude.py  plot_bedrock_contours.py  plot_colormap_reference.py  plot_hillshade_colormaps.py  plot_hillshade_directions.py
examples/showcase/: README.rst  plot_bedrock_altitude.py  plot_bedrock_contours.py  plot_bedrock_erosion.py  plot_bedrock_isostasy.py  plot_ice_margin.py  plot_surface_contours.py  plot_surface_streamplot.py  plot_surface_velocity.py
examples/vectors/: README.rst  plot_modelling_domains.py  plot_natural_earth.py  plot_paleoglaciers_alpine.py  plot_paleoglaciers_arctic.py  plot_scale_bar.py
examples/versions/: plot_v01_akaishi.py
examples/whatsnew/: plot_v001_akaishi.py  plot_v002_bale.py  plot_v003_cocuy.py
hyoga/: __init__.py  conf.py  demo.py  hyoga.py  ice.py  open.py  plot.py
hyoga/calc/: __init__.py
hyoga/core/: __init__.py  accessor.py  config.py  download.py  world.py
hyoga/open/: __init__.py  aggregator.py  bootstrap.py  downloader.py  example.py  local.py  naturalearth.py  paleoglaciers.py  reprojected.py  surface.py
hyoga/plot/: __init__.py  colormaps.py  datasets.py  hillshade.py  naturalearth.py  paleoglaciers.py  scalebar.py  shapefile.py
hyoga/test/: test_plot.py
pismx/: __init__.py  ice.py  open.py  plot.py
