# Copyright (c) 2019-2021, Julien Seguinot (juseg.github.io)
# GNU General Public License v3.0+ (https://www.gnu.org/licenses/gpl-3.0.txt)

# Build config for hyoga

[metadata]

name = hyoga
version = 0.1.1
author = Julien Seguinot
description = A thin wrapper around xarray to open and plot PISM files
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/juseg/hyoga
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7

[flake8]
exclude = .git,__pycache__,_build,doc/conf.py
