# Copyright (c) 2019-2021, Julien Seguinot (juseg.github.io)
# GNU General Public License v3.0+ (https://www.gnu.org/licenses/gpl-3.0.txt)

# Build config for hyoga

[metadata]

name = hyoga
version = 0.2.1
author = Julien Seguinot
description = A Python library to visualize ice-sheet model datasets
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/juseg/hyoga
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    cf_xarray
    geopandas
    matplotlib
    requests
    scipy
    xarray
python_requires = >=3.8

[options.extras_require]
docs =
    contextily
    netcdf4
    sphinx
    sphinx-autosummary-accessors
    sphinx-book-theme>=0.3.3
    sphinx-gallery

[flake8]
exclude = .git,__pycache__,_build,doc/conf.py
