# Copyright (c) 2019-2025, Julien Seguinot (juseg.dev)
# GNU General Public License v3.0+ (https://www.gnu.org/licenses/gpl-3.0.txt)

# Build config for hyoga

[metadata]

name = hyoga
version = 0.3.1
author = Julien Seguinot
description = Paleoglacier modelling framework
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/juseg/hyoga
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    cf_xarray>= 0.5.0  # DataArray.cf.__getitem__() with standard names.
    geopandas
    matplotlib <= 3.8, != 3.8.0  # cm.register_cmap(), matplotlib#26949
    numpy<2
    requests
    rioxarray
    scipy
    xarray>=0.18  # xarray.Dataset.plot.streamplot
python_requires = >=3.9

[options.extras_require]
docs =
    contextily
    netcdf4
    pandas<2.2.0
    sphinx
    sphinx-autosummary-accessors
    sphinx-book-theme>=0.3.3
    sphinx-gallery
open =
    dask

[flake8]
exclude = .git,__pycache__,_build,doc/conf.py
